--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>c00lc4t</title>
 </head>
 <body>
+    
     <a href="#main">
         <div class="close">
         </div>
@@ -20,10 +21,10 @@
         <!-- <a href="#" onclick="snowStorm.randomizeWind();return false"></a> <a href="#" onclick="snowStorm.stop();return false"></a> -->
         <div class="row"> 
         <div class="col-lg-6 mx-auto ">
-            <div class="header"></div>
+            <div class="header"><h1 class="titlePages"></h1></div>
             <h1 class="tittle animate__animated animate__backInDown">c00lc4t</h1>
-
-            <h1 class="mp">Мои проекты</h1>
+            <a href="#bio" class="btn btn-1 ">Обо мне </button></a>   
+<a href="#project"><button class="btn btn-2 ">Проекты</button></a>
             <h3 class="mp">Готовые:</h3>
                     <table class="mp">
                         <tr class="mp">
